[metadata]
name = rowantree.service.sdk
version = 0.9.0
author = Joshua C. Burt
author_email = joshburt@shapeandshare.com
description = The Rowan Tree Service SDK
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requires = >=3.9
install_requires =
    pydantic~=1.10
    requests~=2.28
    python-jose~=3.3
    rowantree.contracts~=0.5
    rowantree.auth.sdk~=0.2
    rowantree.common.sdk~=0.1
package_dir =
    =src
packages = find_namespace:

[options.packages.find]
where = src
