[metadata]
name = rowantree.game.service.sdk
version = 0.26.0
author = Joshua C. Burt
author_email = joshburt@shapeandshare.com
description = The Rowan Tree Game Service SDK
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
python_requires = >=3.9
install_requires =
    pydantic~=1.10
    requests~=2.28
    python-jose~=3.3
    starlette~=0.19
    rowantree.contracts~=0.16
    rowantree.common.sdk~=0.4
    rowantree.auth.sdk~=0.18

package_dir =
    =src
packages = find_namespace:

[options.packages.find]
where = src
